--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -186,11 +186,6 @@ body {
   color: white;
 }
 
-.header .header-wrapper {
-  display: flex;
-  align-items: center;
-}
-
 @media (max-width: 800px) {
   .header {
     flex-direction: column;
@@ -208,47 +203,8 @@ body {
     display: none;
   }
 
-  .header .list {
-    display: none;
-  }
-
   .header .container {
     width: 90vw;
-  }
-
-  .dropdown-button {
-    display: flex;
-    background-color: #a4724c;
-    box-shadow: 0 2px 3px #8a6040;
-    padding: 5px;
-    border-radius: 5px;
-  }
-
-  .dropdown-menu {
-    padding-top: 20px;
-    position: fixed;
-    top: 10px;
-    left: 0;
-    right: 0;
-    background-color: white;
-    transition: top 0.4s;
-  }
-
-  .dropdown-menu li {
-    padding: 10px;
-  }
-
-  .dropdown-menu-open {
-    top: 130px;
-  }
-
-  .bc {
-    background-color: rgba(0, 0, 0, 0.466);
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
   }
 }
 
@@ -264,8 +220,9 @@ body {
     padding: 5px;
   }
 
+  .header form,
   .header form input {
-    width: 50vw;
+    width: 100%;
   }
 }
 
