--- a/src/components/Results/style.css
+++ b/src/components/Results/style.css
@@ -1,6 +1,7 @@
 /* Search Results */
 .search-page {
   padding-bottom: 50px;
+  margin-top: 100px;
 }
 
 .search-page .loading {
@@ -224,4 +225,9 @@
 .current-page {
   background-color: #a4724c !important;
   color: white;
+}
+
+.torrent-uploder,
+.torrent-date {
+  display: flex;
 }
